--- a/CommitMap.DI/CommitMap.DI.csproj
+++ b/CommitMap.DI/CommitMap.DI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0436D8E8-4B62-4FB8-86AB-D410BE2BE9AC}</ProjectGuid>
+    <ProjectGuid>{094EBFDF-3083-448F-8E9D-1F8BF6A71F48}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommitMap.DataAccess</RootNamespace>
-    <AssemblyName>CommitMap.DataAccess</AssemblyName>
+    <RootNamespace>CommitMap.DI</RootNamespace>
+    <AssemblyName>CommitMap.DI</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,11 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitBucketApiClient.cs" />
+    <Compile Include="CommitMapDIModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +51,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CommitMap.DataAccess\CommitMap.DataAccess.csproj">
+      <Project>{0436D8E8-4B62-4FB8-86AB-D410BE2BE9AC}</Project>
+      <Name>CommitMap.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CommitMap.Services\CommitMap.Services.csproj">
       <Project>{6D41C1AF-8042-4A94-BACE-21CB1572F16D}</Project>
       <Name>CommitMap.Services</Name>
