--- a/CommitMap.Services/packages.config
+++ b/CommitMap.Services/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.8.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
