--- a/CommitMap.DesktopApp/App.config
+++ b/CommitMap.DesktopApp/App.config
@@ -1,10 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <section name="CMSolutionProviderConfiguration" type="CommitMap.Services.Facade.CMSolutionProviderConfiguration, CommitMap.Services" />
+    </configSections>
+    <CMSolutionProviderConfiguration
+        useLocal=""
+        solutionLocalPath=""
+
+        solutionName=""
+        enableCache=""
+        cacheAgeMinutes="">
+    </CMSolutionProviderConfiguration>
     <appSettings>
-        <add key="BitbucketAuthToken" value=""/>
-        <add key="BitbucketUrl" value=""/>
-        <add key="BitbucketProjectName" value=""/>
-        <add key="BitbucketRepositoryName" value=""/>
+        <add key="BitbucketAuthToken" value="" />
+        <add key="BitbucketUrl" value="" />
+        <add key="BitbucketProjectName" value="" />
+        <add key="BitbucketRepositoryName" value="" />
+
+        <!--If you have a solution copy on your local machine specify UseLocal=True and specify git folder -->
+        <!--If you want to load a solution copy from source repository specify UseLocal=False. See Cache Section for optimizations-->
+
+        <add key="WorkingFolder" value="c://CM" />
     </appSettings>
 
     <startup> 
