--- a/CommitMap.DesktopApp/packages.config
+++ b/CommitMap.DesktopApp/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.8.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.8.2" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.2" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
